css: Fix misaligned option descriptions
When several options share the same description (such as short and long
options), the descriptions can become misasligned. Make dt elements have
100% width to prevent misalignment. This matches how this markup is
displayed by man viewers.

--- a/archmanweb/static/archmanweb/man_page.css
+++ b/archmanweb/static/archmanweb/man_page.css
@@ -271,6 +271,7 @@ h2.Ss {         margin-top: 1.2em;
                 margin-left: 3.8em; }
 .Bl-tag > dt {
                 float: left;
+                width: 100%;
                 margin-top: 0em;
                 margin-left: -3.8em;
                 padding-right: 0.5em;
